Edge selection often fails if edge is partially out of view #32214

Closed
opened 2012-07-29 11:49:33 +02:00 by Tobias Oelgarte · 7 comments

%%%If i have relatively long edges and try to select them in 3D view, while only a part of the edge is displayed, then i often have trouble to selecting it. If i zoom out, so that nearly the entire edge is visible, then it isn't a problem. But if I'm close to a surface and the edge extends outside the current view then it strongly depends on the view orientation if i can select the edge or not. This happens to me independent from scale or clipping settings (start/end).

I appended an example file in which i have trouble selecting the edges to illustrate the issue. If I'm as close as in the first screenshot, then i can't select the edge. If i zoom out as shown in the second screenshot i can select them. The object in the file is relative large. But it doesn't matter, since this also happens with small objects if you zoom relatively close to the object. It seams that there is no selection possible if one vertex of the edge is "behind the viewer or view-plane (start)".%%%

%%%If i have relatively long edges and try to select them in 3D view, while only a part of the edge is displayed, then i often have trouble to selecting it. If i zoom out, so that nearly the entire edge is visible, then it isn't a problem. But if I'm close to a surface and the edge extends outside the current view then it strongly depends on the view orientation if i can select the edge or not. This happens to me independent from scale or clipping settings (start/end). I appended an example file in which i have trouble selecting the edges to illustrate the issue. If I'm as close as in the first screenshot, then i can't select the edge. If i zoom out as shown in the second screenshot i can select them. The object in the file is relative large. But it doesn't matter, since this also happens with small objects if you zoom relatively close to the object. It seams that there is no selection possible if one vertex of the edge is "behind the viewer or view-plane (start)".%%%

Changed status to: 'Open'

Changed status to: 'Open'

#89295 was marked as duplicate of this issue

#89295 was marked as duplicate of this issue

%%%This is confusing but it's kind of known behavior of current selection technique. It could be improved, but real fix would be to finish WIP patch which implements raycast selection.

Thanks for the report, marking as a todo now.%%%

%%%This is confusing but it's kind of known behavior of current selection technique. It could be improved, but real fix would be to finish WIP patch which implements raycast selection. Thanks for the report, marking as a todo now.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

This issue was referenced by 4044c29069

This issue was referenced by 4044c29069aa3230767fa6d1a3dec196718f80df

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Added subscribers: @APEC, @ideasman42, @PratikPB2123, @rjg

Added subscribers: @APEC, @ideasman42, @PratikPB2123, @rjg
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#32214
No description provided.